Fix image paths in Kodi setup documentation
Updated image paths for Windows, Mac OS, and Linux downloads.

--- a/docs/streaming/Kodi/platform/setup/_pc.mdx
+++ b/docs/streaming/Kodi/platform/setup/_pc.mdx
@@ -3,10 +3,10 @@ Go to [Kodi download page](https://kodi.tv/download/) and dowloand the right pac
 If you need help determining which package to download, refer to the following:
 
 For [Windows](https://kodi.tv/download/windows/) dowload the following:
-![Windows Download](/img/windows.png)
+![Windows Download](guide/img/windows.png)
 
 For [Mac OS](https://kodi.tv/download/macos/), download one of the following depending on your version of Mac OS:
-![Mac Os Downloader](/img/MacOS.png)
+![Mac Os Downloader](guide/img/MacOS.png)
 
 For [Linux](https://kodi.tv/download/linux/), download the flathub one following their guide depending which linux distributions you have:
-![Linux Downloader](/img/Linux.png)
+![Linux Downloader](guide/img/Linux.png)
