Update video source path in Kodi intro documentation

--- a/docs/streaming/Kodi/intro.mdx
+++ b/docs/streaming/Kodi/intro.mdx
@@ -54,6 +54,6 @@ and stream quality. These services are not required to enjoy Kodi, but later in 
     borderRadius: '12px'
   }}
 >
-  <source src="/showcase.mp4" type="video/mp4" />
+  <source src="guide/showcase.mp4" type="video/mp4" />
   Your browser doesnt support this video
 </video>
