Refactor documentation structure and update paths for Kodi setup guides

--- a/docs/streaming/Kodi/intro.mdx
+++ b/docs/streaming/Kodi/intro.mdx
@@ -37,13 +37,12 @@ and stream quality. These services are not required to enjoy Kodi, but later in 
   - iPad
   - Apple TV (sideload)
 - **Raspberry Pi** (Pi 2, 3, 4, 5)
-- **LibreELEC / CoreELEC boxes**
-- **ODROID devices**
 - **Xbox One / Series X/S** (Microsoft Store version)
 - **Generic ARM-based TV boxes**
 - **Steam Deck** (Linux-based manual installation)
 
 ## Showcase
+*This is a short video showcasing Kodi's interface with some addons installed and themes applied:*
 <video 
   controls 
   style={{ 
@@ -54,6 +53,12 @@ and stream quality. These services are not required to enjoy Kodi, but later in 
     borderRadius: '12px'
   }}
 >
-  <source src="guide/showcase.mp4" type="video/mp4" />
+  <source src="/showcase.mp4" type="video/mp4" />
   Your browser doesnt support this video
 </video>
+
+<details>
+  <summary>Details</summary>
+  
+  The theme used in the video is called "Artic fuse 2"
+</details>
