--- a/docs/streaming/Kodi/setup.mdx
+++ b/docs/streaming/Kodi/setup.mdx
@@ -13,9 +13,9 @@ Once it has been setup, you can do a backup to export to another device.
 ## Downloading Kodi
 Here are the instructions for each platform, if you are viewing on a mobile phone, you will need to scroll horizontally to see all the different platform instructions.
 
-import Pc from "./platform/setup/_pc.mdx";
-import Android from "./platform/setup/_android.mdx"
-import Apple from "./platform/setup/_ios.mdx"
+import Pc from "@site/docs/streaming/Kodi/platform/setup/_pc.mdx";
+import Android from "@site/docs/streaming/Kodi/platform/setup/_android.mdx"
+import Apple from "@site/docs/streaming/Kodi/platform/setup/_ios.mdx"
 
 
 <Tabs className="custom-tabs" queryString="platform">
