--- a/i18n/es/docusaurus-plugin-content-docs/current/home.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/home.mdx
@@ -1,3 +1,8 @@
 ---
 sidebar_position: 1
+title: Bienvenido a la Guía de Configuración de Streaming
+sidebar_label: Bienvenido
+slug: /
 ---
+
+# Bienvenido a la Guía de Configuración de Streaming
