--- a/docs/streaming/Kodi/platform/setup/_android.mdx
+++ b/docs/streaming/Kodi/platform/setup/_android.mdx
@@ -1,7 +1,7 @@
 Kodi can be installed on mobile throught [Google Play](https://play.google.com/store/apps/details?id=org.xbmc.kodi)
 
 Also, it is in Huawei store, for those who use new Huawei models without google services.
-
+![android downloader](/img/android.png)
 
 - ARM (armeabi-v7a) - 32 bit
 - ARM64 (arm64-v8a) - 64 bit
