--- a/docs/streaming/Kodi/platform/setup/_ios.mdx
+++ b/docs/streaming/Kodi/platform/setup/_ios.mdx
@@ -2,3 +2,51 @@
 Kodi is not available on the App Store, so it must be installed through sideloading.  
 I just recommend at this point dont do this, skip and use better alternatives like Fusion or Omni
 :::
+
+# iOS Setup Guide
+This guide will walk you through the steps to install Kodi on your iOS device using sideloading methods. Please note that this process may require a computer and some technical knowledge.
+
+<details>
+    <summary>Jailbroken device method</summary>
+    
+    :::note
+        If your device is not jailbroken, please follow one of the methods given in Non-jailbroken devices section
+    :::
+    Install Kodi via Cydia - *(Kodi releases are available on the default BigBoss repository.)*
+
+    <img src="/img/cydia/install_ios_cydia_1.png" alt="Open Cydia" style={{ width: '100%', maxWidth: '420px', height: 'auto', display: 'block', margin: '8px auto', borderRadius: '6px', boxShadow: '0 4px 12px rgba(0,0,0,0.10)' }} />
+    1. Open Cydia on your iOS device.
+
+    <img src="/img/cydia/install_ios_cydia_2.png" alt="Open Search tab" style={{ width: '100%', maxWidth: '420px', height: 'auto', display: 'block', margin: '8px auto', borderRadius: '6px', boxShadow: '0 4px 12px rgba(0,0,0,0.10)' }} />
+    2. Open the "Search" tab
+
+    <img src="/img/cydia/install_ios_cydia_3.png" alt="Search for Kodi" style={{ width: '100%', maxWidth: '420px', height: 'auto', display: 'block', margin: '8px auto', borderRadius: '6px', boxShadow: '0 4px 12px rgba(0,0,0,0.10)' }} />
+    3. Enter "Kodi" in the search field and touch the Kodi version corresponding to your device.
+
+    <img src="/img/cydia/install_ios_cydia_4.webp" alt="Modify Kodi package" style={{ width: '100%', maxWidth: '420px', height: 'auto', display: 'block', margin: '8px auto', borderRadius: '6px', boxShadow: '0 4px 12px rgba(0,0,0,0.10)' }} />
+    4. Touch "Modify".
+
+    <img src="/img/cydia/install_ios_cydia_5.png" alt="Install Kodi" style={{ width: '100%', maxWidth: '420px', height: 'auto', display: 'block', margin: '8px auto', borderRadius: '6px', boxShadow: '0 4px 12px rgba(0,0,0,0.10)' }} />
+    5. Touch "Install".
+
+    <img src="/img/cydia/install_ios_cydia_6.png" alt="Confirm installation" style={{ width: '100%', maxWidth: '420px', height: 'auto', display: 'block', margin: '8px auto', borderRadius: '6px', boxShadow: '0 4px 12px rgba(0,0,0,0.10)' }} />
+    6. Touch "Confirm".
+
+    <img src="/img/cydia/install_ios_cydia_7.webp" alt="Return to Cydia" style={{ width: '100%', maxWidth: '420px', height: 'auto', display: 'block', margin: '8px auto', borderRadius: '6px', boxShadow: '0 4px 12px rgba(0,0,0,0.10)' }} />
+    7. Wait until the "Return to Cydia" button appears and touch it.
+
+    <img src="/img/cydia/install_ios_cydia_8.png" alt="Kodi installed" style={{ width: '100%', maxWidth: '420px', height: 'auto', display: 'block', margin: '8px auto', borderRadius: '6px', boxShadow: '0 4px 12px rgba(0,0,0,0.10)' }} />
+    And you're done! You should now be running Kodi v21.2 Omega for iOS. Enjoy!
+
+</details>
+
+<details>
+    <summary>Non-jailbroken devices</summary>
+    
+    There are several methods to sideload Kodi onto a non-jailbroken iOS device. Below are two common methods: using AltStore and using Cydia Impactor.
+
+
+    :::warning
+        Note: Sideloaded apps may require re-signing every 7 days if you are using a free Apple ID.
+    :::
+</details>
