refactor: clean up introduction section and remove unnecessary English text

--- a/i18n/es/docusaurus-plugin-content-docs/current/streaming/kodi/intro.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/streaming/kodi/intro.mdx
@@ -5,11 +5,6 @@ sidebar_position: 1
 
 ---
 
-title: Introducción | Kodi
-sidebar_label: Introducción
-Hi welcome to the **"Kodi Guide"**, a guide based on [Viren's Stremio Guide](https://guides.viren070.me/stremio) for those who wanna join to the kodi world.
-
-## What is Kodi?
 # Introducción
 
 Hola, bienvenido a la **"Guía de Kodi"**, una guía basada en [la Guía de Stremio de Viren](https://guides.viren070.me/stremio) para quienes quieran adentrarse en el mundo de Kodi.
@@ -19,7 +14,7 @@ Kodi, a primera vista, es un centro multimedia versátil capaz de organizar y re
 Sin embargo, al combinarlo con los addons adecuados y un servicio de debrid, se transforma en una plataforma de streaming "todo en uno".
 Con esta guía configurarás una solución limpia y eficiente para ver contenido de prácticamente cualquier servicio de streaming —y mucho más— con la mejor calidad posible y sin buffering.
 
-Kodi es totalmente gratuito para descargar y usar. Todos los addons también se pueden instalar sin coste.
+Kodi es totalmente gratuito para descargar y usar. Todos los addons también se pueden instalar sin costo.
 Si quieres mejorar la experiencia, opcionalmente puedes integrar addons que se conecten a servicios de debrid o proveedores basados en Usenet para aumentar la velocidad, la disponibilidad de fuentes y la calidad de reproducción. Estos servicios no son obligatorios para disfrutar de Kodi; más adelante en la guía explicaré qué hacen y por qué podrían interesarte.
 
 ## ¿Dónde se puede instalar Kodi?
