Ref: added prettier, Apple TV guide and removed the automatic sidebar.

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -6,11 +6,11 @@ slug: /
 
 # Home
 
-Welcome to this page, mainly focused on learn about software *(how to config)*
+Welcome to this page, mainly focused on learn about software _(how to config)_
 
 :::note
 Do not use this page yet, is under construction
 :::
 
-If you like to help, use my referral on [Torbox](https://torbox.app/subscription?referral=74c57ae2-94eb-48fd-9812-856332b87169) 
+If you like to help, use my referral on [Torbox](https://torbox.app/subscription?referral=74c57ae2-94eb-48fd-9812-856332b87169)
 or leaving a star on the [Github Repo](https://github.com/uSebazz/guide)
