--- a/docs/streaming/kodi/intro.mdx
+++ b/docs/streaming/kodi/intro.mdx
@@ -2,6 +2,7 @@
 title: Introduction | Kodi
 sidebar_label: Introduction
 sidebar_position: 1
+description: Introduction to Kodi, what it is, where it can be installed, and a showcase video.
 ---
 
 # Introduction
@@ -9,15 +10,17 @@ sidebar_position: 1
 Hi welcome to the **"Kodi Guide"**, a guide based on [Viren's Stremio Guide](https://guides.viren070.me/stremio) for those who wanna join to the kodi world.
 
 ## What is Kodi?
-Kodi, at first glance, is a versatile media center capable of organizing and playing your local content. 
+
+Kodi, at first glance, is a versatile media center capable of organizing and playing your local content.
 However, when paired with the right addons and a debrid service, it transforms into "All in one" streaming platform.
 With this guide, you’ll set up a clean, efficient solution for watching content from virtually any streaming service — and much more — in the highest quality possible, without buffering.
 
-Kodi itself is completely free to download and use. All addons can also be installed at no cost. 
-If you want to elevate your experience, you can optionally integrate addons that connect to debrid services or Usenet-based providers to enhance speed, source availability, 
+Kodi itself is completely free to download and use. All addons can also be installed at no cost.
+If you want to elevate your experience, you can optionally integrate addons that connect to debrid services or Usenet-based providers to enhance speed, source availability,
 and stream quality. These services are not required to enjoy Kodi, but later in this guide I’ll explain what they do and why you might consider using them.
 
 ## Where kodi can be installed?
+
 - **Windows PCs** (Windows 7, 8, 10, 11)
 - **macOS computers**
 - **Linux PCs** (Ubuntu, Debian, Arch, etc.)
@@ -42,15 +45,17 @@ and stream quality. These services are not required to enjoy Kodi, but later in 
 - **Steam Deck** (Linux-based manual installation)
 
 ## Showcase
-*This is a short video showcasing Kodi's interface with some addons installed and themes applied:*
-<video 
-  controls 
-  style={{ 
-    width: '100%', 
-    maxWidth: '550px', 
-    aspectRatio: '16/9', 
+
+_This is a short video showcasing Kodi's interface with some addons installed and themes applied:_
+
+<video
+  controls
+  style={{
+    width: '100%',
+    maxWidth: '550px',
+    aspectRatio: '16/9',
     objectFit: 'cover',
-    borderRadius: '12px'
+    borderRadius: '12px',
   }}
 >
   <source src="/showcase.mp4" type="video/mp4" />
@@ -59,6 +64,5 @@ and stream quality. These services are not required to enjoy Kodi, but later in 
 
 <details>
   <summary>Details</summary>
-  
   The theme used in the video is called "Artic fuse 2"
 </details>
