--- a/docs/streaming/kodi/setup.mdx
+++ b/docs/streaming/kodi/setup.mdx
@@ -2,30 +2,37 @@
 title: Setup | Kodi
 sidebar_label: Setup
 sidebar_position: 3
+description: Step-by-step guide to setting up Kodi on various platforms.
 ---
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
+
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # Setup
+
 I will now begin the guide to setting up Kodi and its addons. I recommend that the **initial setup is completed on your laptop or desktop**.
 Once it has been setup, you can do a backup to export to another device.
 
 ## Downloading Kodi
+
 Here are the instructions for each platform, if you are viewing on a mobile phone, you will need to scroll horizontally to see all the different platform instructions.
 
-import Pc from "@site/docs/streaming/kodi/platform/setup/_pc.mdx";
-import Android from "@site/docs/streaming/kodi/platform/setup/_android.mdx"
-import Apple from "@site/docs/streaming/kodi/platform/setup/_ios.mdx"
-
+import Pc from '@site/docs/streaming/kodi/platform/setup/_pc.mdx';
+import Android from '@site/docs/streaming/kodi/platform/setup/_android.mdx';
+import Apple from '@site/docs/streaming/kodi/platform/setup/_ios.mdx';
+import AppleTV from '@site/docs/streaming/kodi/platform/setup/_appleTV.mdx';
 
 <Tabs className="custom-tabs" queryString="platform">
-    <TabItem value="pc" label="PC">
-        <Pc />
-    </TabItem>
-    <TabItem value="android" label="Android">
-        <Android />
-    </TabItem>
-    <TabItem value="Apple" label="Apple (Not recommend)">
-        <Apple />
-    </TabItem>
+  <TabItem value="pc" label="PC">
+    <Pc />
+  </TabItem>
+  <TabItem value="android" label="Android">
+    <Android />
+  </TabItem>
+  <TabItem value="Apple" label="Apple (Not recommend)">
+    <Apple />
+  </TabItem>
+  <TabItem value="appleTV" label="Apple TV">
+    <AppleTV />
+  </TabItem>
 </Tabs>
