--- a/i18n/es/docusaurus-plugin-content-docs/current/streaming/kodi/intro.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/streaming/kodi/intro.mdx
@@ -2,7 +2,6 @@
 title: Introduction | Kodi
 sidebar_label: Introduction
 sidebar_position: 1
-
 ---
 
 # Introducción
@@ -10,6 +9,7 @@ sidebar_position: 1
 Hola, bienvenido a la **"Guía de Kodi"**, una guía basada en [la Guía de Stremio de Viren](https://guides.viren070.me/stremio) para quienes quieran adentrarse en el mundo de Kodi.
 
 ## ¿Qué es Kodi?
+
 Kodi, a primera vista, es un centro multimedia versátil capaz de organizar y reproducir tu contenido local.
 Sin embargo, al combinarlo con los addons adecuados y un servicio de debrid, se transforma en una plataforma de streaming "todo en uno".
 Con esta guía configurarás una solución limpia y eficiente para ver contenido de prácticamente cualquier servicio de streaming —y mucho más— con la mejor calidad posible y sin buffering.
@@ -18,6 +18,7 @@ Kodi es totalmente gratuito para descargar y usar. Todos los addons también se 
 Si quieres mejorar la experiencia, opcionalmente puedes integrar addons que se conecten a servicios de debrid o proveedores basados en Usenet para aumentar la velocidad, la disponibilidad de fuentes y la calidad de reproducción. Estos servicios no son obligatorios para disfrutar de Kodi; más adelante en la guía explicaré qué hacen y por qué podrían interesarte.
 
 ## ¿Dónde se puede instalar Kodi?
+
 - **Windows PCs** (Windows 7, 8, 10, 11)
 - **Ordenadores macOS**
 - **PCs Linux** (Ubuntu, Debian, Arch, etc.)
@@ -42,15 +43,17 @@ Si quieres mejorar la experiencia, opcionalmente puedes integrar addons que se c
 - **Steam Deck** (instalación manual en Linux)
 
 ## Demostración
-*Este es un breve vídeo que muestra la interfaz de Kodi con algunos addons y temas aplicados:*
-<video 
-  controls 
-  style={{ 
-    width: '100%', 
-    maxWidth: '550px', 
-    aspectRatio: '16/9', 
+
+_Este es un breve vídeo que muestra la interfaz de Kodi con algunos addons y temas aplicados:_
+
+<video
+  controls
+  style={{
+    width: '100%',
+    maxWidth: '550px',
+    aspectRatio: '16/9',
     objectFit: 'cover',
-    borderRadius: '12px'
+    borderRadius: '12px',
   }}
 >
   <source src="/showcase.mp4" type="video/mp4" />
@@ -59,6 +62,5 @@ Si quieres mejorar la experiencia, opcionalmente puedes integrar addons que se c
 
 <details>
   <summary>Detalles</summary>
-  
   El tema usado en el vídeo se llama "Arctic Fuse 2"
 </details>
