--- a/docs/streaming/kodi/platform/setup/_ios.mdx
+++ b/docs/streaming/kodi/platform/setup/_ios.mdx
@@ -34,7 +34,7 @@ Choose one of the methods below to install Kodi on your iOS device.
 <details>
     <summary>Non-jailbroken devices</summary>
     
-    ### Sideload a self signed .ipa file
+    **Sideload a self signed .ipa file**
     :::danger[Warning]
         Currently, these methods require that Kodi be re-installed every 7 days if you are using a free iOS dev account.
     :::
@@ -59,7 +59,8 @@ Choose one of the methods below to install Kodi on your iOS device.
 
     Now you should have your kodi.ipa file ready for installation.
 
-    #### Installing Kodi using Sideloadly
+    **Installing Kodi using Sideloadly**
+    
     Download [Sideloadly](https://sideloadly.io/) and install it on your PC.
     :::note
         Sideloadly is still a work-in-progress and there might be some bugs that you face while installing Kodi.
