--- a/docs/streaming/kodi/platform/setup/_appleTV.mdx
+++ b/docs/streaming/kodi/platform/setup/_appleTV.mdx
@@ -3,21 +3,21 @@ Kodi is not available on the App Store, so it must be installed through sideload
 I recommend skipping this step and using better alternatives like <strong>Fusion</strong> or <strong>Omni</strong>.
 :::
 
-#### Apple TV versions supported by Kodi:
+**Apple TV versions supported by Kodi:**
 
 - Apple TV 4 (Called "Apple TV HD" by Apple)
 - Apple TV 5 (Called "Apple TV 4K" by Apple)
 
 ---
 
-### Install from Windows (only for Apple TV 4)
+**Install from Windows (only for Apple TV 4)**
 
-#### What about the Apple TV 4K?
+**What about the Apple TV 4K?**
 
 Unfortunately the Apple TV 4K does not have a USB-C. If you are not jailbroken the only official way to sideload Kodi on your device is to use Xcode on macOS with a wireless connection.
 To get macOS on your computer you can use a virtual machine or check for building a [hackintosh](https://en.wikipedia.org/wiki/Hackintosh), but we will not discuss this here.
 
-#### Requirements:
+**Requirements:**
 
 - [Cydia Impactor](http://www.cydiaimpactor.com/)
 - Windows 7 or higher
@@ -25,7 +25,7 @@ To get macOS on your computer you can use a virtual machine or check for buildin
 - Kodi `.deb` file for tvOS: [Download here](https://mirrors.kodi.tv/releases/darwin/tvos/org.xbmc.kodi-tvos_21.2-tvos.deb?https=1) (Lastest stable version at the time of writing)
 - A USB-C cable, without that, you can't connect your Apple TV with computer
 
-#### Convert .deb to .ipa:
+**Convert .deb to .ipa:**
 
 - Right Click on .deb file of Kodi that you downloaded on your PC and Select 7-zip > Extract files. Click OK in the next Window.
 - Open the resulting Folder and you will find data.tar file inside. Simply extract data.tar file with Right Click > 7-zip > Extract Files.
@@ -38,7 +38,7 @@ To get macOS on your computer you can use a virtual machine or check for buildin
 
 ---
 
-#### Install Kodi on your Apple TV
+**Install Kodi on your Apple TV**
 
 Connect your Apple TV 4 with power and make sure that it is turned ON before proceeding.
 
@@ -54,6 +54,6 @@ If you are using a free Apple developper account you will need to do this step e
 
 ---
 
-### Install from macOS (Apple TV 4 and Apple TV 4K)
+**Install from macOS (Apple TV 4 and Apple TV 4K)**
 
 The kodi guide for macOS is located here: [macOS setup guide](<https://kodi.wiki/view/HOW-TO:Install_Kodi_on_Apple_TV_4_and_5_(HD_and_4K)#Install_from_Mac>). It is better you see that guide.
