Refactor code structure for improved readability and maintainability

--- a/docs/streaming/kodi/setup.mdx
+++ b/docs/streaming/kodi/setup.mdx
@@ -21,6 +21,8 @@ import Pc from '@site/docs/streaming/kodi/platform/setup/_pc.mdx';
 import Android from '@site/docs/streaming/kodi/platform/setup/_android.mdx';
 import Apple from '@site/docs/streaming/kodi/platform/setup/_ios.mdx';
 import AppleTV from '@site/docs/streaming/kodi/platform/setup/_appleTV.mdx';
+import FireTV from '@site/docs/streaming/kodi/platform/setup/_fireTV.mdx';
+import WebOS from '@site/docs/streaming/kodi/platform/setup/_webOS.mdx';
 
 <Tabs className="custom-tabs" queryString="platform">
   <TabItem value="pc" label="PC">
@@ -34,5 +36,11 @@ import AppleTV from '@site/docs/streaming/kodi/platform/setup/_appleTV.mdx';
   </TabItem>
   <TabItem value="appleTV" label="Apple TV">
     <AppleTV />
+  </TabItem>
+  <TabItem value="fireTV" label="Fire TV">
+    <FireTV />
+  </TabItem>
+  <TabItem value="webOS" label="webOS (LG Smart TV)">
+    <WebOS />
   </TabItem>
 </Tabs>
